# SimdHash

./: CMakeLists.txt  Makefile  README.md
SimdHash/: Makefile  common.h  hashcommon.c  hashcommon.h  main.c  md5.c  sha1.c  sha2.c  sha2.h  shacommon.c  shacommon.h  simdcommon.h  simdhash.c  simdhash.h
SimdHash.xcodeproj/: project.pbxproj
SimdHash.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SimdHash.xcodeproj/xcshareddata/xcschemes/: SimdHash.xcscheme  SimdHashTest.xcscheme
SimdHash.xcodeproj/xcuserdata/gazz.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SimdHash.xcodeproj/xcuserdata/gazz.xcuserdatad/xcschemes/: xcschememanagement.plist
SimdHashTest/: Makefile  main.c  simdhashtest_library.c  simdhashtest_main.c
src/: SimdHash.hpp  SimdHashBuffer.hpp  fnv.c  hashcommon.c  hashcommon.h  library.h  md4.c  md5.c  sha1.c  sha2.c  simdcommon.h  simdhash.c  simdhash.h
test/: crypt_test.cpp  extend_test.cpp  fnv_test.cpp  functional_test.cpp  library_test.cpp  simd_ops_test.cpp  simdhashtest_crypt.c  simdhashtest_extend.c  simdhashtest_library.c  simdhashtest_main.c  simdhashtest_perf.c
